--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,29 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-#mobile-menu {
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-    transform: translateX(100%); /* Começa fora da tela */
-    z-index: 40; /* Garante que o menu fique atrás do ícone */
+
+.font-header { 
+    font-family: 'Solomon', sans-serif; 
+    letter-spacing: -0.02em; 
 }
 
-#mobile-menu.opacity-100 {
-    opacity: 1;
-    transform: translateX(0); /* Move para dentro da tela */
+.font-body { 
+    font-family: 'Times New Roman MT', serif; 
 }
 
-#mobile-menu {
-    background-color: white; /* Garantir que o fundo seja branco */
-    pointer-events: none; /* Não interage com o menu quando fechado */
-    min-height: 100vh; /* Garante que o menu ocupe toda a altura da tela */
+.organic-shape { 
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; 
 }
 
-#mobile-menu.pointer-events-auto {
-    pointer-events: auto; /* Ativa as interações quando o menu está visível */
+.hide-scroll-bar::-webkit-scrollbar { 
+    display: none; 
 }
-
-/* Ícone dentro do botão */
-button {
-    position: relative;
-    z-index: 50; /* Garante que o ícone de "X" fique sempre acima do menu */
+.hide-scroll-bar { 
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
 }
